--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DB_PASSWORD=1897
 DB_HOST=localhost
 DB_PORT=5432
 SECRET_KEY=random_secret_key123
+DB_NEON=postgresql://delivery_owner:4oQnAJ0ILRdG@ep-silent-boat-a2n6u6mv.eu-central-1.aws.neon.tech/delivery?sslmode=require
